Fixed background height issue where 100vh was causing a scrollbar to appear

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 body {
   background: linear-gradient(225deg, #fff, #415b72);
   font-family: 'Lato', sans-serif;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
 }
 
 .circle-icon {
